<resources>
    <string name="app_name">Prueba Room Peliculas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Agregar nota-->
    <string name="fecha_hora_actual">Fecha y hora actual</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No visto</string>

    <string-array name="EstadoPelicula">
        <item>"--"</item>
        <item>"No visto"</item>
        <item>"Visto"</item>
    </string-array>
</resources>