<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    android:padding="0.2dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/secundario">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/min_8dp"

        >

        <View
            android:id="@+id/imgLinea"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/linea"/>

        <ImageView
            android:id="@+id/imgNota"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintDimensionRatio="16:9"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/textTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/titulo"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/descripcion"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/Fecha"
            android:layout_marginTop="8dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>